--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "element-plus": "^1.0.2-beta.48",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.9",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/node": "^15.12.4",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.3.2",
