--- a/.github/workflows/deploy_gitHub_pages.yml
+++ b/.github/workflows/deploy_gitHub_pages.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: lint
+name: deploy_gitHub_pages
 
 # Controls when the workflow will run
 on:
