--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,11 +19,13 @@ jobs:
   lint_job:
     name: Check project eslint
     # The type of runner that the job will run on
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        node_version: ['10', '12']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: ubuntu-latest
+    # 不需要下面矩阵那么多
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        node_version: ['10', '12']
+#        os: [ubuntu-latest, windows-latest, macOS-latest]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,7 +36,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-          
+
       - name: Install
         run: npm install # 安装依赖
 
