--- a/.github/workflows/deploy_gitHub_pages.yml
+++ b/.github/workflows/deploy_gitHub_pages.yml
@@ -40,7 +40,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3 # 使用部署到 GitHub pages 的 action
         with:
           publish_dir: ./dist # 部署打包后的 dist 目录
-          github_token: ${{ secrets.vite-learn_deploy }} # secret 名
+          github_token: ${{ secrets.DEPLOY }} # secret 名
           user_name: ${{ secrets.MY_USER_NAME }}
           user_email: ${{ secrets.MY_USER_EMAIL }}
           commit_message: deploy to github pages  # 部署时的 git 提交信息，自由填写
