更新readme并设置gh actions的缓存

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,8 +37,19 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: Install
-        run: npm install # 安装依赖
+      # 缓存依赖
+      - name: Cache node_modules
+        id: cache_node_modules
+        uses: actions/cache@v2
+        with:
+          path: prime-numbers
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
+      # 安装依赖
+      - name: Install
+        if: steps.cache_node_modules.outputs.cache-hit != 'true'
+        run: npm install
+
+      # 检查
       - name: Check
-        run: npm run fix # 检查
+        run: npm run fix
