--- a/.github/workflows/deploy_gitHub_pages.yml
+++ b/.github/workflows/deploy_gitHub_pages.yml
@@ -44,3 +44,5 @@ jobs:
           user_name: ${{ secrets.MY_USER_NAME }}
           user_email: ${{ secrets.MY_USER_EMAIL }}
           commit_message: deploy to github pages  # 部署时的 git 提交信息，自由填写
+        env:
+          CI: 'gh'
