--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: deploy_gitHub_pages
+name: deploy
 
 # Controls when the workflow will run
 on:
