--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,26 +13,65 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  deploy:
-    name: deploy GitHub pages #部署
+  lint_job:
+    name: eslint检查
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    # 不需要下面矩阵那么多
+    #    runs-on: ${{ matrix.os }}
+    #    strategy:
+    #      matrix:
+    #        node_version: ['10', '12']
+    #        os: [ubuntu-latest, windows-latest, macOS-latest]
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Setup Node.js v14.x
+      - name: 设置node环境 Node.js v14.x
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
 
-      - name: Install #安装依赖
+      - name: 缓存依赖
+        id: cache_node_modules
+        uses: actions/cache@v2
+        with:
+          path: prime-numbers
+          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-${{ env.cache-name }}-
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
+
+      - name: 安装依赖
         run: npm install
 
-      - name: build #打包
+      - name: 检查
+        run: npm run fix
+  deploy:
+    name: 部署
+    runs-on: ubuntu-latest
+    needs: lint_job
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: 设置node环境 Node.js v14.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.x'
+
+      - name: 安装依赖
+        run: npm install
+
+      - name: 打包
         run: npm run build
 
-      - name: deploy GitHub pages #部署到 GitHub pages
+      - name: 部署到 GitHub pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./dist # 部署打包后的 dist 目录
