--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: 检查
         run: npm run fix
-  deploy:
-    name: 部署
+  deploy_github_pages:
+    name: 部署 GitHub pages
     runs-on: ubuntu-latest
     needs: lint_job
 
@@ -79,3 +79,19 @@ jobs:
           user_name: ${{ secrets.MY_USER_NAME }}
           user_email: ${{ secrets.MY_USER_EMAIL }}
           commit_message: deploy to github pages  # 部署时的 git 提交信息，自由填写
+  deploy_tencent_cloudbase:
+    name: 部署 Tencent Cloudbase
+    runs-on: ubuntu-latest
+    needs: lint_job
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Deploy to Tencent CloudBase
+        uses: TencentCloudBase/cloudbase-action@v2
+        with:
+          secretId: ${{secrets.TENCENT_SECRETID}}
+          secretKey: ${{secrets.TENCENT_SECRETKEY}}
+          envId: ${{secrets.TENCENT_EVNID}}
