--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,18 +34,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-
-      # 缓存依赖
-      - name: Cache node_modules
-        id: cache_node_modules
-        uses: actions/cache@v2
-        with:
-          path: prime-numbers
-          key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.OS }}-build-${{ env.cache-name }}-
-            ${{ runner.OS }}-build-
-            ${{ runner.OS }}-
+          cache: 'yarn'
 
       # 安装依赖
       - name: Install
